<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/fgContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/bottomTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/bottomTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/tabHomePage"
            style="@style/bottomTab"
            android:drawableTop="@drawable/tab_home_bg"
            android:text="@string/homePage" />

        <RadioButton
            android:id="@+id/tabFocus"
            style="@style/bottomTab"
            android:drawableTop="@drawable/tab_focus_bg"
            android:text="@string/focus" />

        <ImageView
            android:id="@+id/tabPublish"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/publish_add" />

        <RadioButton
            android:id="@+id/tabNotify"
            style="@style/bottomTab"
            android:drawableTop="@drawable/tab_notify_bg"
            android:text="@string/notify" />


        <RadioButton
            android:id="@+id/tabMine"
            style="@style/bottomTab"
            android:drawableTop="@drawable/tab_mine_bg"
            android:text="@string/mine" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>