<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="235dp"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_10_white">


    <TextView
        android:id="@+id/tvContent"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/content"
        android:textColor="#222222"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DEDFE1"
        app:layout_constraintBottom_toTopOf="@+id/tvConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#222222"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContent" />


    <View
        android:id="@+id/line1"
        android:layout_width="0.5dp"
        android:layout_height="38dp"
        android:background="#DEDFE1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="#39a0f8"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/tvContent" />


</android.support.constraint.ConstraintLayout>